fix: collapsable-card.component.css

--- a/src/app/components/collapsable-card/collapsable-card.component.css
+++ b/src/app/components/collapsable-card/collapsable-card.component.css
@@ -20,7 +20,7 @@
   display: flex;
   flex-direction: row-reverse;
   padding: 0.5em;
-  margin: 1em 0;
+  margin: .5em 0;
   justify-content: center;
   align-items: center;
 }
